# pobgenerator

./: .gitignore  DESIGN-v2.md  DESIGN.md  HANDOFF.md  JOINT-REALIZER-DESIGN.md  ML-DIALOGUE.md  REVIEW-of-DESIGN-v2.md  ROUND2-FINDINGS.md  SPIKES.md  WORK-REPORT.md  corpus_seed.txt  probe_out.txt  pyproject.toml  pytest_out.txt  qqqq
builds/: 1.txt  10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
corpus/: 01051564306-3355__화염짐승.meta.json  01051564306-3355__화염짐승.pob.xml  0ctahedron-7787__utfgeneralci.meta.json  0ctahedron-7787__utfgeneralci.pob.xml  0drixen-6309__Odrixen_GC.meta.json  0drixen-6309__Odrixen_GC.pob.xml  0tti-3746__MirageOtti.meta.json  0tti-3746__MirageOtti.pob.xml  1024374270-4475__請大笑大王.meta.json  1024374270-4475__請大笑大王.pob.xml  1145141919810-2018__閃打閃打閃打閃打閃打.meta.json  1145141919810-2018__閃打閃打閃打閃打閃打.pob.xml  18800419532-0765__无人生还.meta.json  18800419532-0765__无人生还.pob.xml  1X5-1982__一乘五电打.meta.json  1X5-1982__一乘五电打.pob.xml  1adybug_KANA-5048__筋肉花火マン.meta.json  1adybug_KANA-5048__筋肉花火マン.pob.xml  1m_RainingMan-7642__Raima_NewHorizons.meta.json  1m_RainingMan-7642__Raima_NewHorizons.pob.xml  1max-7755__レオン_スコット_ケネディ.meta.json  1max-7755__レオン_スコット_ケネディ.pob.xml  1qqqqpoe-3655__Ygolovka.meta.json  1qqqqpoe-3655__Ygolovka.pob.xml  1uohdh2-6687__TemptationSupport.meta.json  1uohdh2-6687__TemptationSupport.pob.xml  2BRStarScream-6455__UnholyMightxQQQ.meta.json  2BRStarScream-6455__UnholyMightxQQQ.pob.xml  2CHZ-0574__CHZ_Citizen.meta.json  2CHZ-0574__CHZ_Citizen.pob.xml  3176889967-1614__dreamDeath.meta.json  4oza-3261__wavan.meta.json  (+468 more)
(+98 files in other folders)
