[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poebuildgen"
version = "0.0.0"
description = "Генератор билдов PoE1 (Phase 0: интеграция с Path of Building)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "lupa>=2.0",
    "ortools>=9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ml = [
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "joblib>=1.3",
]

[tool.setuptools]
packages = ["poebuildgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
